@@ -74,6 +74,7 @@ char *cfg_keys[] = {
     [key_execp_command                          ]="execp_command",
     [key_execp_continuous                       ]="execp_continuous",
     [key_execp_dwheel_command                   ]="execp_dwheel_command",
+    [key_execp_dwheel_command_sink              ]="execp_dwheel_command_sink",
     [key_execp_font                             ]="execp_font",
     [key_execp_font_color                       ]="execp_font_color",
     [key_execp_has_icon                         ]="execp_has_icon",
@@ -81,14 +82,18 @@ char *cfg_keys[] = {
     [key_execp_icon_w                           ]="execp_icon_w",
     [key_execp_interval                         ]="execp_interval",
     [key_execp_lclick_command                   ]="execp_lclick_command",
+    [key_execp_lclick_command_sink              ]="execp_lclick_command_sink",
     [key_execp_markup                           ]="execp_markup",
     [key_execp_mclick_command                   ]="execp_mclick_command",
+    [key_execp_mclick_command_sink              ]="execp_mclick_command_sink",
     [key_execp_monitor                          ]="execp_monitor",
     [key_execp_name                             ]="execp_name",
     [key_execp_padding                          ]="execp_padding",
     [key_execp_rclick_command                   ]="execp_rclick_command",
+    [key_execp_rclick_command_sink              ]="execp_rclick_command_sink",
     [key_execp_tooltip                          ]="execp_tooltip",
     [key_execp_uwheel_command                   ]="execp_uwheel_command",
+    [key_execp_uwheel_command_sink              ]="execp_uwheel_command_sink",
     [key_font_shadow                            ]="font_shadow",
     [key_gradient                               ]="gradient",
     [key_gradient_id                            ]="gradient_id",
