@@ -75,6 +75,7 @@ typedef enum {
     key_execp_command,
     key_execp_continuous,
     key_execp_dwheel_command,
+    key_execp_dwheel_command_sink,
     key_execp_font,
     key_execp_font_color,
     key_execp_has_icon,
@@ -82,14 +83,18 @@ typedef enum {
     key_execp_icon_w,
     key_execp_interval,
     key_execp_lclick_command,
+    key_execp_lclick_command_sink,
     key_execp_markup,
     key_execp_mclick_command,
+    key_execp_mclick_command_sink,
     key_execp_monitor,
     key_execp_name,
     key_execp_padding,
     key_execp_rclick_command,
+    key_execp_rclick_command_sink,
     key_execp_tooltip,
     key_execp_uwheel_command,
+    key_execp_uwheel_command_sink,
     key_font_shadow,
     key_gradient,
     key_gradient_id,
