@@ -1,6 +1,7 @@
 2020-02-10 master
 - Enhancements:
   - Added option "rounded_corners" to disable rounding for separate corners
+  - Added option to use continuous executor process as command sink for its own action commands
   - "tput clear" command in executors is possible without "-T" option (TERM is set to better value than "dumb")
   - Enhanced API documentation comment style to look more like documentation right in code (resemble doxygen output)
   - tint2conf: spacing option for buttons and executors, enable negative spacing for task icon and text
@@ -12,8 +13,9 @@
   - snprintf sometimes could overwrite terminating null in fixed buffers, resulting to unpredictable possible crashes
   - Last possible artifacts in area / tooltip draw (try thick border lines with rounding)
   - Task icon placing did not use spacing in centered mode, resulting to half of spacing moved to padding
-  - tint2conf: Colors had channel values decremented when saved to config and used wrong required precision
-  - tint2conf: Background image in the editor looked different than on the panel
+  - tint2conf
+    - Colors had channel values decremented when saved to config and used wrong required precision
+    - Background image in the editor looked different than on the panel
 2022-02-10 17.0.3
 - Enhancements:
   - Added command to refresh executors (issue #747) (Arash Rohani)
